<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>me.escoffier.fortune</groupId>
        <artifactId>fortune-benchmark</artifactId>
        <version>1.0-SNAPSHOT</version>
    </parent>

    <artifactId>fortune-benchmark-client</artifactId>


    <description>Uses Hyperfoil to load test a fortune application</description>

    <build>
        <plugins>
            <plugin>
                <groupId>io.hyperfoil</groupId>
                <artifactId>hyperfoil-maven-plugin</artifactId>
                <version>${hyperfoil.version}</version>
                <configuration>
                    <yaml>hyperfoil.yaml</yaml>
                    <outputPercentileDistribution>true</outputPercentileDistribution>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>19</source>
                    <target>19</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
